--- a/GenCon-iOS/GenCon-iOS/Storyboards/EditEvent.storyboard
+++ b/GenCon-iOS/GenCon-iOS/Storyboards/EditEvent.storyboard
@@ -12,13 +12,13 @@
         <!--NewEvent-->
         <scene sceneID="noI-Ar-SwQ">
             <objects>
-                <viewController storyboardIdentifier="EditEventViewController" id="G6t-gx-5CF" customClass="EditEventViewController" customModule="GenCon_iOS" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="G6t-gx-5CF" customClass="EditEventViewController" customModule="GenCon_iOS" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="9rn-Zg-ivY">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="900"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="onDrag" translatesAutoresizingMaskIntoConstraints="NO" id="ebW-UK-Yjs">
-                                <rect key="frame" x="0.0" y="20" width="375" height="880"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="836"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="u1K-Bb-gja">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="800"/>
@@ -227,7 +227,17 @@
                     <navigationItem key="navigationItem" title="NewEvent" id="sOd-gC-STo">
                         <barButtonItem key="rightBarButtonItem" image="send" id="8gi-w8-3aR"/>
                     </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <size key="freeformSize" width="375" height="900"/>
+                    <connections>
+                        <outlet property="endDate" destination="roY-Bb-2MS" id="RuP-Tv-Gxl"/>
+                        <outlet property="endTime" destination="zxm-MK-50q" id="6tZ-b4-DXy"/>
+                        <outlet property="eventTitle" destination="4gz-hW-aBz" id="8vg-LD-zMM"/>
+                        <outlet property="memo" destination="dNc-Id-ALd" id="0S8-Y9-RB1"/>
+                        <outlet property="saveButton" destination="8gi-w8-3aR" id="lu0-Hv-NGA"/>
+                        <outlet property="startDate" destination="gSm-8P-USo" id="Gj8-ms-Rrz"/>
+                        <outlet property="startTime" destination="ums-Un-7Kq" id="urV-hZ-8wI"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6m2-8i-zTo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
